# ticketing

./: README.md  docker-compose.yaml  index.html  schema.sql
backend/: .env.example  Cargo.toml  Dockerfile  database.dbm  schema.sql
backend/.sqlx/: query-0d4d698b039ac95743392f44379bd1b8881297a06d0e0d333b065aec5d9da24e.json  query-0e16d100c6b38d9acec995ae094020bfa28f0d8cb52b88532d3be5f9744c51ee.json  query-158a940f0bd95e35d456fdb2762195107b414d0300349c4e4b0301af4163bac2.json  query-276c2bdf76ea7ebb42bc14ea146bd9b5552fd6d58d7c3e582c904fb22d3db2f7.json  query-279497a2e3f9a7f3aecc056a948548806434ba3f1697da1b4c0fe979ec21ddbd.json  query-2ae0c47c86b0b7ef12b41e9ba9abd4393263654c85278554d028492bd82d5fe7.json  query-49f4a5b3bd0cfd8899a6a671714f47272261715e9ebb5706120d25c0b3a9ab3b.json  query-5018875ddfa48099828cfe13e741ca47e27e91d4e87c76204d75873244b4b586.json  query-5ad412f4b08f6b822f26f2ee318871f3683032b2eecbd0589510df5babedfca9.json  query-89fb2bd0517e8c56278bbbe38e567815fbb620abed3e1bf18c2fa4de10263689.json  query-8b6fb67c394ee1fbc4523b7239d6fc64a40a1950d0779b6c912857057c68b9ae.json  query-8bb358d4127f80524fa655ee48723008b5717fe1d3dc86e48219cbd278f3eebe.json  query-aedf964a707b480495d7dc7e0e51391493fc0dbc9a9325105a5565f2fa2ba913.json  query-d63850fcc3f810266469b0e00503da64d4c42b0869289dc50a3190c9344b62a4.json  query-f9ed7e8b7fa0103cb585368045543347a311044a3972b9cf669945efdb2f7427.json
backend/migrations/: 20231023112453_init.down.sql  20231023112453_init.up.sql
backend/src/: config.rs  error.rs  mail.rs  main.rs  models.rs
backend/src/routes/: event.rs  login.rs  (+2 more)
(+15 files in other folders)
