[package]
name = "ticketing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.5"
chrono = { version = "0.4.31", features = ["serde"] }
envconfig = "0.10.0"
lettre = { version = "0.11.0", features = ["tokio1", "tokio1-native-tls"] }
lol_html = "1.2.0"
qrcode-generator = "4.1.9"
rocket = { version = "0.5.0-rc.3", features = ["json", "uuid"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio", "uuid", "time", "chrono"] }
uuid = { version = "1.4.1", features = ["v4", "serde"] }
